# Goalcast

./: .dockerignore  .env.example  .gitignore  API_STRUCTURE_SUMMARY.md  BUILD_SUMMARY.md  DISTRIBUTE.md  Dockerfile  MANIFEST.in  PACKAGE_SPLIT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SKILLS_PACKAGE_SUMMARY.md  checklist.md  commit_all.sh  docker-compose.yml  footystats.skill  index.html  mcporter.json.example  package.json  pyproject.toml  requirements.txt  spec.md  start.sh  tasks.md  test_footystats.py
backend/: .dockerignore  .env.example  Dockerfile  config.py  conftest.py  database.py  main.py  pyproject.toml  requirements.txt  start_all.py
backend/agents/: analyst.py  llm_router.py  scheduler.py
backend/agents/adapters/: __init__.py  adapter.py  tool_executor.py
backend/agents/core/: blackboard.py  coordinator.py  data_collector.py  events.py  fixture_merger.py  league_config.py  match_store.py  orchestrator.py  pipeline.py  state.py
backend/agents/web/: __init__.py  intent.py  server.py
backend/analytics/: analyst.py  confidence.py  ev_calculator.py  poisson.py  reviewer.py
backend/config/: oddalerts_leagues.json  providers.json  settings.py  sportmonks_leagues.json  watchlist.yaml
backend/data/seed/: competitions_zh.json  teams_zh.json
backend/datasource/: __init__.py
backend/datasource/datafusion/: __init__.py  quality.py  resolver.py
backend/datasource/sportmonks/: __init__.py  service.py
backend/pipeline/: collector.py  discovery.py  league_resolver.py  runner.py  scheduler.py
backend/provider/: __init__.py  base.py  models.py  registry.py
backend/provider/footystats/: client.py
backend/provider/oddalerts/: __init__.py  client.py  feature_extractor.py  fixture_mapper.py
backend/provider/sportmonks/: client.py  sportmonks_fetch.py
backend/provider/tests/: test_models.py
backend/provider/understat/: __init__.py  client.py  test_understat.py  understat_debug.html
backend/routers/: auth.py  backtest.py  fixtures.py  history.py  insights.py  me.py  odds.py  paper_trading.py  signals.py  sync.py
backend/scripts/: archive_misconfigured_books.py  backfill.py  batch_runner.py  export_team_names.py  fetch_active_leagues.py  goalcast.sh  migrate_matches.py  quant_dashboard.py  reactivate_ken_ht_ev.py  review_engine.py  seed_methodology.py
backend/server/: config.json  requirements.txt  server.py
backend/server/routes/: agents.py  board.py  browse.py  chat.py  config.py  pipeline.py
backend/server/ws/: manager.py
backend/services/: ah.py  alerts.py  auth.py  backtest.py  oddalerts.py  paper_trading.py  paper_trading_ah.py  seed.py  snapshot.py  sync.py  value_bets.py
backend/services/signals/: __init__.py  base.py  (+7 more)
backend/store/: match_store.py
backend/tests/: test_alerts.py  test_auth.py  test_backtest.py  test_database.py  test_insights.py  test_me_prefs.py  test_oddalerts_client.py  test_paper_trading.py  test_paper_trading_ah.py  test_paper_trading_books.py  test_paper_trading_settle_market.py  test_reactivate_ken_ht_ev.py  test_routers_fixtures.py  test_routers_odds.py  test_services_ah.py  test_signal_methodology.py  test_signals_backtest.py  test_signals_books.py  test_signals_conditions.py  test_signals_endpoints.py  test_signals_gs_ht_ev.py  test_signals_gs_line_move.py  test_signals_gs_mispricing.py  test_signals_gs_sharp_square.py  test_snapshot.py  test_sync_jobs.py  test_value_bets.py
backend/utils/: cache.py  cache_reader.py  config_parser.py  data_manager.py  logger.py  normalize.py  rate_limit.py
skills/: INSTALL.md  README.md  __init__.py  goalcast-analyzer-v25.skill  goalcast-analyzer-v30.skill  goalcast-compare.skill  pyproject.toml
skills/footystats/: SKILL.md
skills/footystats-analyst-v1/: SKILL.md
skills/footystats-provider/: SKILL.md
skills/goalcast-analysis-orchestrator/: SKILL.md  sportmonks_leagues.json
skills/goalcast-analyze/: SKILL.md  SKILL_zh.md
skills/goalcast-analyzer-v25/: SKILL.md
skills/goalcast-analyzer-v30/: SKILL.md
skills/goalcast-analyzer-v40/: SKILL.md
skills/goalcast-compare/: SKILL.md
skills/goalcast-daily/: SKILL.md
skills/goalcast-get-match-data/: SKILL.md
skills/goalcast-match-blackboard-schema/: SKILL.md
skills/goalcast-report/: SKILL.md
skills/goalcast-report-generator/: SKILL.md
skills/goalcast-schedule/: SKILL.md
skills/goalcast-trade-executor/: SKILL.md
skills/sportmonks-analyst-v1/: SKILL.md
skills/sportmonks-provider/: SKILL.md
skills/understat-provider/: SKILL.md
(+806 files in other folders)
