[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goalcast"
version = "1.0.2"
description = "Goalcast Football Prediction Engine - 8-layer quantitative analysis system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Goalcast Team", email = "goalcast@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sports",
]
requires-python = ">=3.10"
dependencies = [
    "httpx[asyncio]==0.27.0",
    "pydantic==2.9.0",
    "loguru==0.7.2",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.35",
    "pandas==2.2.3",
    "numpy>=1.26.0",
    "aiohttp==3.13.3",
]

[project.optional-dependencies]
ai = [
    "anthropic==0.38.0",
    "openai==1.54.0",
]
scheduler = [
    "apscheduler==3.10.4",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio==0.24.0",
    "anthropic==0.38.0",
    "openai==1.54.0",
    "apscheduler==3.10.4",
]

[project.urls]
Homepage = "https://github.com/your-org/Goalcast"
Documentation = "https://github.com/your-org/Goalcast#readme"
Repository = "https://github.com/your-org/Goalcast.git"

[project.scripts]
goalcast-match = "goalcast.cmd.match_data_cmd:main"
goalcast-get-matches = "goalcast.cmd.get_matches:main"

[tool.setuptools.packages.find]
include = ["goalcast*"]
exclude = ["tests*", "scripts*", "*.tests"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.example"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
