[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goalcast-skills"
version = "1.0.0"
description = "Goalcast Skills for Claude Code and OpenClaw - AI-powered football prediction skills"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Goalcast Team", email = "goalcast@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sports",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/your-org/Goalcast"
Documentation = "https://github.com/your-org/Goalcast#readme"
Repository = "https://github.com/your-org/Goalcast.git"

[project.entry-points."goalcast"]
skills = "goalcast_skills"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills*"]

[tool.setuptools.package-data]
"skills" = ["**/*.md", "**/*.json"]
